# 9gag-notion-scraper

./: NOTES.md  Pipfile  README.md  pyproject.toml
ninegag_notion_scraper/: __init__.py  __main__.py  args.py  cli.py  debug.py  entities.py  env.py  ninegag.py  notion.py  webdriver.py
ninegag_notion_scraper/app/entities/: meme.py
ninegag_notion_scraper/app/interfaces/: cookie_repo.py
ninegag_notion_scraper/app/interfaces/repositories/: meme.py
ninegag_notion_scraper/app/use_cases/: cookies.py  get_meme.py  get_memes.py  meme.py  save_meme.py
ninegag_notion_scraper/infra/: webdriver.py
ninegag_notion_scraper/infra/repo/: cookie_filestorage.py  meme_filestorage.py
ninegag_notion_scraper/infra/repo/meme_ninegag_scraper/: __init__.py  element_article.py  page_single.py  page_stream.py
ninegag_notion_scraper/infra/repo/meme_notion/: __init__.py  base.py  converters.py  get_memes.py  save_meme.py
ninegag_notion_scraper/infrastructure/: cookie_filestorage.py  meme_filestorage.py  meme_ninegag_scraper.py  meme_notion.py
ninegag_notion_scraper/infrastructure/meme_ninegag_scraper/: base.py  element_article.py  page_single.py  page_stream.py
ninegag_notion_scraper/infrastructure/meme_notion/: converters.py  get_memes.py  save_meme.py
ninegag_notion_scraper/scrapers/: ninegag.py
ninegag_notion_scraper/scrapers/repository/: __init__.py  ninegag.py
ninegag_notion_scraper/storage/: base.py  file_storage.py  notion.py
ninegag_notion_scraper/storage/repository/: __init__.py  file_storage.py  notion.py
