[tool.poetry]
name = "9gag-notion-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "*"
notion-client = "*"
python-dotenv = "*"
validators = "*"
requests = "*"
retry = "*"
latest-user-agents = "*"
pydantic = "*"


[tool.poetry.group.dev.dependencies]
autopep8 = "*"
mypy = "*"
types-requests = "*"
types-retry = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
